--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -149,61 +149,120 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e44c0e21-8c92-4274-a3fe-fbc5a09ed64d"
+        "outputId": "0199dcc6-9151-4be5-cc3d-555b029544e3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----------+--------------------+\n",
-            "|year(date)|round(avg(price), 2)|\n",
-            "+----------+--------------------+\n",
-            "|      2019|           315782.18|\n",
-            "|      2020|           315949.81|\n",
-            "|      2021|           313218.09|\n",
-            "|      2022|           314421.54|\n",
-            "+----------+--------------------+\n",
+            "+----------+-------------+\n",
+            "|year(date)|average_price|\n",
+            "+----------+-------------+\n",
+            "|      2019|     300263.7|\n",
+            "|      2020|    298353.78|\n",
+            "|      2021|    301819.44|\n",
+            "|      2022|    296363.88|\n",
+            "+----------+-------------+\n",
             "\n"
           ]
         }
       ],
       "source": [
         "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT year(date), ROUND(AVG(price), 2) FROM sales GROUP BY year(date) ORDER BY year(date)\").show()\n"
+        "spark.sql(\"\"\"SELECT year(date), ROUND(AVG(price), 2) as average_price\n",
+        "             FROM sales\n",
+        "             WHERE bedrooms = 4\n",
+        "             GROUP BY year(date)\n",
+        "             ORDER BY year(date)\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "l8p_tUS8h8it"
+        "id": "l8p_tUS8h8it",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdf83a2b-0221-4019-d1ea-f16d58ba480d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-------------+\n",
+            "|date_built|average_price|\n",
+            "+----------+-------------+\n",
+            "|      2010|    292859.62|\n",
+            "|      2011|    291117.47|\n",
+            "|      2012|    293683.19|\n",
+            "|      2013|    295962.27|\n",
+            "|      2014|    290852.27|\n",
+            "|      2015|     288770.3|\n",
+            "|      2016|    290555.07|\n",
+            "|      2017|    292676.79|\n",
+            "+----------+-------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# 4. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
-        "\n"
+        "spark.sql(\"\"\"SELECT date_built, ROUND(AVG(price), 2) as average_price\n",
+        "             FROM sales WHERE bedrooms = 3 AND bathrooms = 3\n",
+        "             GROUP BY date_built\n",
+        "             ORDER BY date_built\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "Y-Eytz64liDU"
+        "id": "Y-Eytz64liDU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af695712-d5f6-4914-ef2e-72221e5dffa0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-------------+\n",
+            "|date_built|average_price|\n",
+            "+----------+-------------+\n",
+            "|      2010|    285010.22|\n",
+            "|      2011|    276553.81|\n",
+            "|      2012|    307539.97|\n",
+            "|      2013|    303676.79|\n",
+            "|      2014|    298264.72|\n",
+            "|      2015|    297609.97|\n",
+            "|      2016|     293965.1|\n",
+            "|      2017|    280317.58|\n",
+            "+----------+-------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-        "\n"
+        "spark.sql(\"\"\"SELECT date_built, ROUND(AVG(price), 2) as average_price FROM sales\n",
+        "             WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_living >= 2000\n",
+        "             GROUP BY date_built\n",
+        "             ORDER BY date_built\n",
+        "\"\"\").show()\n"
       ]
     },
     {
