Cmpleted number 6 SQL

--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -267,20 +267,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "0a645986-7179-440c-c0bc-345f1693f8af"
+        "outputId": "2f01bfcb-67f7-4bcb-bcbd-c248a2cb4b2a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.200241088867188e-05 seconds ---\n"
+            "+----+----------+\n",
+            "|view| avg_price|\n",
+            "+----+----------+\n",
+            "| 100| 1026669.5|\n",
+            "|  99|1061201.42|\n",
+            "|  98|1053739.33|\n",
+            "|  97|1129040.15|\n",
+            "|  96|1017815.92|\n",
+            "|  95| 1054325.6|\n",
+            "|  94| 1033536.2|\n",
+            "|  93|1026006.06|\n",
+            "|  92| 970402.55|\n",
+            "|  91|1137372.73|\n",
+            "|  90|1062654.16|\n",
+            "|  89|1107839.15|\n",
+            "|  88|1031719.35|\n",
+            "|  87| 1072285.2|\n",
+            "|  86|1070444.25|\n",
+            "|  85|1056336.74|\n",
+            "|  84|1117233.13|\n",
+            "|  83|1033965.93|\n",
+            "|  82| 1063498.0|\n",
+            "|  81|1053472.79|\n",
+            "+----+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.5042409896850586 seconds ---\n"
           ]
         }
       ],
@@ -290,7 +316,7 @@
         "# Although this is a small dataset, determine the run time for this query.\n",
         "\n",
         "start_time = time.time()\n",
-        "\n",
+        "spark.sql(\"SELECT view, ROUND(AVG(price), 2) as avg_price FROM sales GROUP BY view HAVING avg_price >= 350000 ORDER BY view DESC\").show()\n",
         "\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
