--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -185,13 +185,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 34,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdf83a2b-0221-4019-d1ea-f16d58ba480d"
+        "outputId": "d6414473-c491-4dbb-d241-e09527e163d8"
       },
       "outputs": [
         {
@@ -218,20 +218,21 @@
         "# 4. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
         "spark.sql(\"\"\"SELECT date_built, ROUND(AVG(price), 2) as average_price\n",
-        "             FROM sales WHERE bedrooms = 3 AND bathrooms = 3\n",
+        "             FROM sales\n",
+        "             WHERE bedrooms = 3 AND bathrooms = 3\n",
         "             GROUP BY date_built\n",
         "             ORDER BY date_built\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 35,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af695712-d5f6-4914-ef2e-72221e5dffa0"
+        "outputId": "168f1a25-aab1-4d02-d84d-b01697a4adc3"
       },
       "outputs": [
         {
@@ -258,7 +259,8 @@
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-        "spark.sql(\"\"\"SELECT date_built, ROUND(AVG(price), 2) as average_price FROM sales\n",
+        "spark.sql(\"\"\"SELECT date_built, ROUND(AVG(price), 2) as average_price\n",
+        "             FROM sales\n",
         "             WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_living >= 2000\n",
         "             GROUP BY date_built\n",
         "             ORDER BY date_built\n",
@@ -267,13 +269,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "2f01bfcb-67f7-4bcb-bcbd-c248a2cb4b2a"
+        "outputId": "6c879e4e-9fb9-4f21-fad1-aeaa79640357"
       },
       "outputs": [
         {
@@ -306,7 +308,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5042409896850586 seconds ---\n"
+            "--- 0.39110517501831055 seconds ---\n"
           ]
         }
       ],
@@ -316,7 +318,12 @@
         "# Although this is a small dataset, determine the run time for this query.\n",
         "\n",
         "start_time = time.time()\n",
-        "spark.sql(\"SELECT view, ROUND(AVG(price), 2) as avg_price FROM sales GROUP BY view HAVING avg_price >= 350000 ORDER BY view DESC\").show()\n",
+        "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
+        "             FROM sales\n",
+        "             GROUP BY view\n",
+        "             HAVING avg_price >= 350000\n",
+        "             ORDER BY view DESC\n",
+        "\"\"\").show()\n",
         "\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
@@ -324,43 +331,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "KAhk3ZD2tFy8"
+        "id": "KAhk3ZD2tFy8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "921b4998-f1d0-4156-bd68-0e17eff2db58"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
       "source": [
-        "# 7. Cache the the temporary table home_sales.\n"
+        "# 7. Cache the the temporary table home_sales.\n",
+        "spark.sql(\"cache table sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "4opVhbvxtL-i"
+        "id": "4opVhbvxtL-i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdedfea8-448c-4d6f-9be8-ee5683f825b5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ],
       "source": [
         "# 8. Check if the table is cached.\n",
-        "spark.catalog.isCached('home_sales')"
+        "spark.catalog.isCached('sales')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "63c7dc50-d96a-4a48-97b6-91a446cdb973"
+        "outputId": "9cf2d39d-b3e0-47af-d2b6-4b1ffb245491"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 5.459785461425781e-05 seconds ---\n"
+            "+----+----------+\n",
+            "|view| avg_price|\n",
+            "+----+----------+\n",
+            "| 100| 1026669.5|\n",
+            "|  99|1061201.42|\n",
+            "|  98|1053739.33|\n",
+            "|  97|1129040.15|\n",
+            "|  96|1017815.92|\n",
+            "|  95| 1054325.6|\n",
+            "|  94| 1033536.2|\n",
+            "|  93|1026006.06|\n",
+            "|  92| 970402.55|\n",
+            "|  91|1137372.73|\n",
+            "|  90|1062654.16|\n",
+            "|  89|1107839.15|\n",
+            "|  88|1031719.35|\n",
+            "|  87| 1072285.2|\n",
+            "|  86|1070444.25|\n",
+            "|  85|1056336.74|\n",
+            "|  84|1117233.13|\n",
+            "|  83|1033965.93|\n",
+            "|  82| 1063498.0|\n",
+            "|  81|1053472.79|\n",
+            "+----+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.3141438961029053 seconds ---\n"
           ]
         }
       ],
@@ -371,7 +435,12 @@
         "# Determine the runtime and compare it to the uncached runtime.\n",
         "\n",
         "start_time = time.time()\n",
-        "\n",
+        "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
+        "             FROM sales\n",
+        "             GROUP BY view\n",
+        "             HAVING avg_price >= 350000\n",
+        "             ORDER BY view DESC\n",
+        "\"\"\").show()\n",
         "\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
@@ -379,53 +448,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
       "outputs": [],
       "source": [
-        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n"
+        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n",
+        "df_sales.write.partitionBy(\"date_built\").mode(\"overwrite\").parquet(\"sales_partitioned\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
       "outputs": [],
       "source": [
-        "# 11. Read the parquet formatted data.\n"
+        "# 11. Read the parquet formatted data.\n",
+        "p_df_p = spark.read.parquet(\"sales_partitioned\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
       "outputs": [],
       "source": [
-        "# 12. Create a temporary table for the parquet data.\n"
+        "# 12. Create a temporary table for the parquet data.\n",
+        "p_df_p.createOrReplaceTempView(\"sales_partitioned\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "d6748ea6-d70a-41fd-dcb8-c214a85e949e"
+        "outputId": "7266767a-eefd-47cd-e645-ecf1ab483e3c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.104873657226562e-05 seconds ---\n"
+            "+----+----------+\n",
+            "|view| avg_price|\n",
+            "+----+----------+\n",
+            "| 100| 1026669.5|\n",
+            "|  99|1061201.42|\n",
+            "|  98|1053739.33|\n",
+            "|  97|1129040.15|\n",
+            "|  96|1017815.92|\n",
+            "|  95| 1054325.6|\n",
+            "|  94| 1033536.2|\n",
+            "|  93|1026006.06|\n",
+            "|  92| 970402.55|\n",
+            "|  91|1137372.73|\n",
+            "|  90|1062654.16|\n",
+            "|  89|1107839.15|\n",
+            "|  88|1031719.35|\n",
+            "|  87| 1072285.2|\n",
+            "|  86|1070444.25|\n",
+            "|  85|1056336.74|\n",
+            "|  84|1117233.13|\n",
+            "|  83|1033965.93|\n",
+            "|  82| 1063498.0|\n",
+            "|  81|1053472.79|\n",
+            "+----+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.5484955310821533 seconds ---\n"
           ]
         }
       ],
@@ -437,32 +535,68 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
+        "             FROM sales\n",
+        "             GROUP BY view\n",
+        "             HAVING avg_price >= 350000\n",
+        "             ORDER BY view DESC\n",
+        "\"\"\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "hjjYzQGjtbq8"
+        "id": "hjjYzQGjtbq8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "271e48d3-a1d4-4f00-a63d-c9f700307b18"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ],
       "source": [
-        "# 14. Uncache the home_sales temporary table.\n"
+        "# 14. Uncache the home_sales temporary table.\n",
+        "spark.sql(\"uncache table sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "Sy9NBvO7tlmm"
+        "id": "Sy9NBvO7tlmm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c68893f8-c7fd-4ea3-a7f2-b527638fb042"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ],
       "source": [
         "# 15. Check if the home_sales is no longer cached\n",
-        "\n"
+        "spark.catalog.isCached(\"sales\")\n"
       ]
     },
     {
