Cache and partition updated

--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -12,27 +12,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "11f3c94e-aede-49b1-c6e5-77110e4a26c0"
+        "outputId": "42a5c2b8-2e78-4a5a-fa93-a752304f755a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
             "Hit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:4 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Hit:4 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
             "Hit:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:6 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:7 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
             "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
             "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
             "Reading package lists... Done\n"
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 70,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -81,13 +81,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 71,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49f896f6-0bc8-425e-937e-17b51c89c30f"
+        "outputId": "d9c7fbae-4a25-40cb-9623-91f6a852d742"
       },
       "outputs": [
         {
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 72,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -149,13 +149,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 73,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0199dcc6-9151-4be5-cc3d-555b029544e3"
+        "outputId": "111462b5-0e70-4a3b-dce1-a58842b8ce3b"
       },
       "outputs": [
         {
@@ -185,13 +185,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 74,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6414473-c491-4dbb-d241-e09527e163d8"
+        "outputId": "03cc0926-d546-4b17-f4ca-c80101ea0c76"
       },
       "outputs": [
         {
@@ -226,13 +226,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 75,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "168f1a25-aab1-4d02-d84d-b01697a4adc3"
+        "outputId": "87023ff4-8306-4335-8e06-6b836c13b31f"
       },
       "outputs": [
         {
@@ -269,13 +269,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 76,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "6c879e4e-9fb9-4f21-fad1-aeaa79640357"
+        "outputId": "32e6efe7-250c-4884-fa7c-3067eedfde5c"
       },
       "outputs": [
         {
@@ -308,7 +308,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.39110517501831055 seconds ---\n"
+            "--- 0.6687943935394287 seconds ---\n"
           ]
         }
       ],
@@ -331,13 +331,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 77,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "921b4998-f1d0-4156-bd68-0e17eff2db58"
+        "outputId": "1b2dcbdc-4315-45ff-f81d-6194df065254"
       },
       "outputs": [
         {
@@ -348,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 77
         }
       ],
       "source": [
@@ -358,13 +358,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 78,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdedfea8-448c-4d6f-9be8-ee5683f825b5"
+        "outputId": "c2f9d2e2-f35a-4893-aedf-abbdd01c5efa"
       },
       "outputs": [
         {
@@ -375,7 +375,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 78
         }
       ],
       "source": [
@@ -385,13 +385,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "9cf2d39d-b3e0-47af-d2b6-4b1ffb245491"
+        "outputId": "82bcef23-4614-4a70-8101-a8855e8f7e8b"
       },
       "outputs": [
         {
@@ -424,7 +424,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.3141438961029053 seconds ---\n"
+            "--- 0.5696465969085693 seconds ---\n"
           ]
         }
       ],
@@ -435,20 +435,20 @@
         "# Determine the runtime and compare it to the uncached runtime.\n",
         "\n",
         "start_time = time.time()\n",
+        "\n",
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
-        "             FROM sales\n",
+        "             FROM sales_partitioned\n",
         "             GROUP BY view\n",
         "             HAVING avg_price >= 350000\n",
         "             ORDER BY view DESC\n",
         "\"\"\").show()\n",
-        "\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 80,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -460,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 81,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 82,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -484,13 +484,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 83,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "7266767a-eefd-47cd-e645-ecf1ab483e3c"
+        "outputId": "3c2a2cf2-2fb7-4441-939b-1ff42dbae1f9"
       },
       "outputs": [
         {
@@ -523,7 +523,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5484955310821533 seconds ---\n"
+            "--- 1.2847256660461426 seconds ---\n"
           ]
         }
       ],
@@ -536,7 +536,7 @@
         "start_time = time.time()\n",
         "\n",
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
-        "             FROM sales\n",
+        "             FROM sales_partitioned\n",
         "             GROUP BY view\n",
         "             HAVING avg_price >= 350000\n",
         "             ORDER BY view DESC\n",
@@ -547,13 +547,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 84,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "271e48d3-a1d4-4f00-a63d-c9f700307b18"
+        "outputId": "bf3f3820-3f23-415c-e49c-68bbd6a53b32"
       },
       "outputs": [
         {
@@ -564,7 +564,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 84
         }
       ],
       "source": [
@@ -574,13 +574,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 85,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c68893f8-c7fd-4ea3-a7f2-b527638fb042"
+        "outputId": "66f68921-4ee2-43ff-df59-b91c5561fb7d"
       },
       "outputs": [
         {
@@ -591,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 85
         }
       ],
       "source": [
@@ -601,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
