Fixed query for cached table

--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -12,29 +12,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "42a5c2b8-2e78-4a5a-fa93-a752304f755a"
+        "outputId": "b538dabb-1029-497f-f73a-19bf472a3215"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:4 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "Hit:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com] [Waiting for headers] [1 InRelease 3,626 B/3,626 B 100%] [Conn\r                                                                                                    \rGet:2 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
+            "\r0% [Connecting to archive.ubuntu.com] [2 InRelease 14.2 kB/129 kB 11%] [1 InRelease 3,626 B/3,626 B \r0% [Connecting to archive.ubuntu.com] [2 InRelease 14.2 kB/129 kB 11%] [Connecting to ppa.launchpadc\r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [127 kB]\n",
+            "Get:6 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,857 kB]\n",
             "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [2,128 kB]\n",
+            "Hit:9 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:10 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,084 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,376 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [31.8 kB]\n",
+            "Get:13 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [81.0 kB]\n",
+            "Fetched 6,946 kB in 1s (6,214 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -65,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -81,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d9c7fbae-4a25-40cb-9623-91f6a852d742"
+        "outputId": "6aa277cd-fccb-4d45-8601-ee233b1dac19"
       },
       "outputs": [
         {
@@ -137,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 4,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -149,13 +153,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 5,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "111462b5-0e70-4a3b-dce1-a58842b8ce3b"
+        "outputId": "d59718c6-65fe-41a6-b6c1-1091e1b8c585"
       },
       "outputs": [
         {
@@ -185,13 +189,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 6,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03cc0926-d546-4b17-f4ca-c80101ea0c76"
+        "outputId": "174b361a-78f3-46d3-939d-10ec369767ad"
       },
       "outputs": [
         {
@@ -226,13 +230,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 7,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87023ff4-8306-4335-8e06-6b836c13b31f"
+        "outputId": "04a13105-23c7-4154-afe4-c502125f4869"
       },
       "outputs": [
         {
@@ -269,13 +273,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "32e6efe7-250c-4884-fa7c-3067eedfde5c"
+        "outputId": "9f8618d1-580f-4ac5-aa4a-b9bd6cea800b"
       },
       "outputs": [
         {
@@ -308,7 +312,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.6687943935394287 seconds ---\n"
+            "--- 0.40732240676879883 seconds ---\n"
           ]
         }
       ],
@@ -331,13 +335,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 9,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b2dcbdc-4315-45ff-f81d-6194df065254"
+        "outputId": "13815501-6e84-4d5f-e9fa-815aebd9c9e0"
       },
       "outputs": [
         {
@@ -348,7 +352,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 9
         }
       ],
       "source": [
@@ -358,13 +362,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 10,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c2f9d2e2-f35a-4893-aedf-abbdd01c5efa"
+        "outputId": "cef905aa-98ec-41c5-d226-8f5fbfe67caa"
       },
       "outputs": [
         {
@@ -375,7 +379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 10
         }
       ],
       "source": [
@@ -385,13 +389,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "82bcef23-4614-4a70-8101-a8855e8f7e8b"
+        "outputId": "429f9e65-9cca-40e0-ab30-1fc7568de6c8"
       },
       "outputs": [
         {
@@ -424,7 +428,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.5696465969085693 seconds ---\n"
+            "--- 0.20613884925842285 seconds ---\n"
           ]
         }
       ],
@@ -437,7 +441,7 @@
         "start_time = time.time()\n",
         "\n",
         "spark.sql(\"\"\"SELECT view, ROUND(AVG(price), 2) as avg_price\n",
-        "             FROM sales_partitioned\n",
+        "             FROM sales\n",
         "             GROUP BY view\n",
         "             HAVING avg_price >= 350000\n",
         "             ORDER BY view DESC\n",
@@ -448,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 13,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -460,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 14,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -472,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 15,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -484,13 +488,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "3c2a2cf2-2fb7-4441-939b-1ff42dbae1f9"
+        "outputId": "b94f6639-6bee-41b5-fa43-50eb5baba908"
       },
       "outputs": [
         {
@@ -523,7 +527,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.2847256660461426 seconds ---\n"
+            "--- 0.5427958965301514 seconds ---\n"
           ]
         }
       ],
@@ -547,13 +551,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 17,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bf3f3820-3f23-415c-e49c-68bbd6a53b32"
+        "outputId": "18a51c2b-313b-405f-ffbf-b4abf816dde3"
       },
       "outputs": [
         {
@@ -564,7 +568,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 17
         }
       ],
       "source": [
@@ -574,13 +578,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 18,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66f68921-4ee2-43ff-df59-b91c5561fb7d"
+        "outputId": "f4280bea-4fc0-4bd9-a07d-35ca1d57fcd3"
       },
       "outputs": [
         {
@@ -591,7 +595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 18
         }
       ],
       "source": [
@@ -601,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
@@ -612,12 +616,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "V28",
       "include_colab_link": true
     },
-    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -634,7 +637,8 @@
     },
     "nteract": {
       "version": "0.28.0"
-    }
+    },
+    "accelerator": "TPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
